--- a/_Template/Solves/Solves.csproj
+++ b/_Template/Solves/Solves.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Task\Task.csproj" />
+    <ProjectReference Include="..\Task\Tasks.csproj" />
   </ItemGroup>
 
 </Project>
