EncapsulationTaskUpdate: добавил _old проектам на .NET Framework

--- a/EncapsulationTask/Solves_old/Solves_old.csproj
+++ b/EncapsulationTask/Solves_old/Solves_old.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3854672-525D-451E-A482-C13FA2998A0A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>EncapsulationTask</RootNamespace>
-    <AssemblyName>EncapsulationTask</AssemblyName>
+    <ProjectGuid>{47F0BD3F-D323-4A17-92FF-2A73A1F4A408}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Solves_old</RootNamespace>
+    <AssemblyName>Solves_old</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -49,14 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NullItemDictionary.cs" />
+    <Compile Include="NullItemDictionarySolved.cs" />
     <Compile Include="NullItemDictionaryTests.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EncapsulationTask_old\EncapsulationTask_old.csproj">
+      <Project>{b3854672-525d-451e-a482-c13fa2998a0a}</Project>
+      <Name>EncapsulationTask_old</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
