--- a/EncapsulationTask/EncapsulationTask/EncapsulationTask.csproj
+++ b/EncapsulationTask/EncapsulationTask/EncapsulationTask.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -9,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentAssertions" Version="5.6.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
       <PackageReference Include="NUnit" Version="3.5.0" />
     </ItemGroup>
 
