--- a/EncapsulationTask/Solves/Solves.csproj
+++ b/EncapsulationTask/Solves/Solves.csproj
@@ -7,12 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentAssertions" Version="5.6.0" />
-      <PackageReference Include="NUnit" Version="3.5.0" />
+        <PackageReference Include="FluentAssertions" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="NUnit" Version="3.14.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\EncapsulationTask\EncapsulationTask.csproj" />
+        <ProjectReference Include="..\EncapsulationTask\EncapsulationTask.csproj"/>
     </ItemGroup>
 
 </Project>
