--- a/EncapsulationTask/EncapsulationTask/EncapsulationTask.csproj
+++ b/EncapsulationTask/EncapsulationTask/EncapsulationTask.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="FluentAssertions" Version="7.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="NUnit" Version="3.14.0"/>
+        <PackageReference Include="NUnit3TestAdapter" Version="3.14.0"/>
     </ItemGroup>
 
 </Project>
