--- a/_Template/Solves/Solves.csproj
+++ b/_Template/Solves/Solves.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Task\Tasks.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
