--- a/_Template/Task/Tasks.csproj
+++ b/_Template/Task/Tasks.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="3.11.0" />
   </ItemGroup>
 
