--- a/fluent/HttpTask/packages.config
+++ b/fluent/HttpTask/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="FluentAssertions" version="5.6.0" targetFramework="net472" />
   <package id="NUnit" version="3.5.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
 </packages>
