--- a/http/HttpTask/Task.csproj
+++ b/http/HttpTask/Task.csproj
@@ -6,19 +6,20 @@
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
+
+        <AssemblyName>HttpTask</AssemblyName>
+
+        <RootNamespace>HttpTask</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="8.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0"/>
         <PackageReference Include="coverlet.collector" Version="3.1.2"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Documentation\Documentation.csproj" />
-      <ProjectReference Include="..\Stringify\Stringify.csproj" />
     </ItemGroup>
 
 </Project>
