--- a/proxy/Task/Task.csproj
+++ b/proxy/Task/Task.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="SexyProxy" Version="2.0.104" />
     <PackageReference Include="SexyProxy.Emit" Version="2.0.104" />
