--- a/reflection/Stringify/Stringify.csproj
+++ b/reflection/Stringify/Stringify.csproj
@@ -6,15 +6,12 @@
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
-
-        <AssemblyName>HttpTask</AssemblyName>
-
-        <RootNamespace>HttpTask</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="8.0.1" />
+        <PackageReference Include="FluentAssertions" Version="7.2.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0"/>
